--- a/citas/templates/doctor/agregar_receta.html
+++ b/citas/templates/doctor/agregar_receta.html
@@ -307,7 +307,7 @@
         <header><i class="fas fa-user"></i> Información del Paciente</header>
         <div class="body">
             <div class="info-grid">
-                <div class="info-item"><i class="fas fa-id-card"></i> <strong>Nombre:</strong> {{ paciente.nombre }} {{ paciente.apellido_paterno}}{{paciente.apellido_materno}}</div>
+                <div class="info-item"><i class="fas fa-id-card"></i> <strong>Nombre:</strong> {{ paciente.nombre }} {{ paciente.apellido }}</div>
                 <div class="info-item"><i class="fas fa-stethoscope"></i> <strong>Diagnóstico:</strong> {{ cita.diagnostico|default:'N/A' }}</div>
             </div>
         </div>
